# esmfold3

./: .gitignore  CLAUDE.md  Dockerfile  README.md  esmfold.py  features.json  pyproject.toml  run.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: docker.yml
datasets/: 2MLT.fasta  2MLT.fasta.fxi
results/: features.json  run.json
