[project]
name = "esmfold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "biotite>=1.6.0",
    "esm>=3.2.3",
    "httpx>=0.28.1",
    "openmm[cuda13]>=8.5.1",
    "pdbfixer>=1.12.0",
    "propka>=3.5",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["esmfold.py"]

[tool.uv]
no-binary-package = ["torchtext"]
